                    _               _____  ____   __
__   _____ _ __ ___(_) ___  _ __   |___ / |___ \ / /_
\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \   __) | '_ \
 \ V /  __/ |  \__ \ | (_) | | | |  ___) | / __/| (_) |
  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_____|\___/
               (unreleased)

 * SMPI: improved support of the proxy apps (including those using petsc)
 * WiFi: easier description in XML; energy plugin; more examples.
 * ns-3: Many bug fixes, can use the wifi models too.
 * (+ many bug fixes, documentation improvement and internal refactoring)

                    _               _____  ____  ____
__   _____ _ __ ___(_) ___  _ __   |___ / |___ \| ___|
\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \   __) |___ \
 \ V /  __/ |  \__ \ | (_) | | | |  ___) | / __/ ___) |
  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_____|____/
               February 2. 2020 (02 02 2020)

The Palindrom Day Release.

 * Improve the Python usability (stability and documentation).
 * Further deprecate MSG: you now have to pass -Denable-MSG=ON to cmake.
 * SimDAG++: Automatic dependencies on S4U activities (experimental).
 * (+ many bug fixes and internal refactoring)

                    _               _____  ____  _  _
__   _____ _ __ ___(_) ___  _ __   |___ / |___ \| || |
\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \   __) | || |_
 \ V /  __/ |  \__ \ | (_) | | | |  ___) | / __/|__   _|
  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_____|  |_|
               October 9. 2019

The Clean Disk Release.

 * Introduce an experimental Wifi network model.
 * Introduce <disk> (cleaner logic than <storage>).
 * SMPI: Implement Errhandlers and some more MPI3.1 calls.
 * (+ many bug fixes and internal refactorings)

                    _               _____  ____  _____
__   _____ _ __ ___(_) ___  _ __   |___ / |___ \|___ /
\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \   __) | |_ \
 \ V /  __/ |  \__ \ | (_) | | | |  ___) | / __/ ___) |
  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_____|____/